<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="583dp"
        android:layout_weight="1"
        android:background="#F5F4F4"
        android:orientation="vertical"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configurationTxtView"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearlayoutWelcome"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/bienvenue"
                android:textColor="#000000"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textViewWelcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/veuillez_rentrer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/votre_courriel"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutConnect"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:hint="@string/exemple_email_com"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textViewWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/obligatoire"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonConnect"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/connexion"
                android:textColor="#000000"
                app:cornerRadius="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="308dp"
            android:orientation="vertical">

            <View
                android:id="@+id/divider"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="?android:attr/listDivider"
                android:backgroundTint="#000000"
                android:backgroundTintMode="add" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tu_veux_t_amuser"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#0073FF"
                android:text="Configuration"
                android:textColor="#000000"
                app:cornerRadius="40dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#0073FF"
                android:text="@string/historique"
                android:textColor="#000000"
                app:cornerRadius="40dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#0073FF"
                android:text="@string/jeu"
                android:textColor="#000000"
                app:cornerRadius="40dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/configurationTxtView"
        android:layout_width="272dp"
        android:layout_height="73dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="0"
        android:foregroundGravity="center"
        android:gravity="center_vertical"
        android:text="@string/mastermind"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="413dp"
        android:layout_height="67dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:itemBackground="?selectableItemBackground"
            app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>