<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD">

    <LinearLayout
        android:id="@+id/configLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/configurationTxtView"
            android:layout_width="fill_parent"
            android:layout_height="70sp"
            android:layout_marginStart="40dp"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:text="@string/configuration"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/sectInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F5F4F4"
            android:orientation="vertical"
            android:paddingTop="20sp"
            android:paddingBottom="20sp">

            <LinearLayout
                android:id="@+id/sectLongCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/txtViewLongCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/longueur_du_code"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerLongCode"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:background="@color/white"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sectNCouleurs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtViewNCouleurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="10sp"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/nombre_de_couleurs"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerNCouleurs"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="10sp"
                    android:background="@color/white"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:minHeight="48dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sectNTentatives"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtViewNTentatives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="10sp"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/nombre_maximum_de_tentatives"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerNTentatives"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="10sp"
                    android:background="@color/white"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:minHeight="48dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#F5F4F4"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="30sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/btnReinitialiserConfig"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:backgroundTint="#E14242"
                    android:text="@string/renitialiser"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSoumettreConfig"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:backgroundTint="#B8E142"
                    android:text="@string/soumettre"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        app:itemBackground="?selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>