<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    tools:context=".vue.activites.JeuActivity"
    tools:ignore="VisualLintBounds">

    <LinearLayout
        android:id="@+id/linearLayoutPartie"
        android:layout_width="411dp"
        android:layout_height="444dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layoutChoixCouleurs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridPartie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="#FFFFFF"
            android:foregroundGravity="center"
            app:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutChoixCouleurs"
        android:layout_width="413dp"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayoutValid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="411dp"
        android:layout_height="70dp"
        android:background="@color/white"
        app:itemBackground="?selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <LinearLayout
        android:id="@+id/LinearLayoutValid"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnValiderJeu"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#B8E142"
            android:text="@string/valider"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutPartie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAbandon"
            android:layout_width="146dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#E14242"
            android:text="@string/abandon"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNouvellePartie"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#7680D2"
            android:text="@string/nouvelle_partie"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>